Fix alignment of advice sections

--- a/app/assets/stylesheets/components/_advice.css.sass
+++ b/app/assets/stylesheets/components/_advice.css.sass
@@ -1,9 +1,7 @@
 .advice
-  position: absolute
-  left: 50%
-  margin-left: -200px
+  position: relative
+  margin: 20% auto
   text-align: center
-  top: 40%
   width: 600px
 
   p
@@ -41,6 +39,3 @@
   .giant-icon
     font-size: 125px
 
-.with-left-nav
-  .advice
-    left: 35%
